--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -10,11 +10,20 @@ footer {
     background-color: black;
     height: 210px;
     color: white;
-    h3 {
-        font-size: 12px;
-        width:130px;
-        text-align: center;
-        margin-top: 15px;
-        font-weight: 400;
-    }
 }
+h3 {
+    font-size: 12px;
+    width:130px;
+    text-align: center;
+    margin-top: 15px;
+    font-weight: 400;
+}
+
+
+@media (min-width: 720px) {
+ h3 {
+    width: 200px;
+ }
+}
+
+
