--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,7 +5,7 @@ header {
     justify-content: space-between;
     align-items: center;
 }
-img {
+.header_logo {
     width: 120px
 }
 ul {
@@ -26,7 +26,7 @@ ul {
 }
 
 @media (min-width: 720px) {
-    img {
+    .header_logo {
         width:200px
     }
     ul {
@@ -38,7 +38,7 @@ ul {
 }
 
 @media (min-width: 1024px) {
-    img {
+    .header_logo {
         width:270px
     }
     ul {
