--- a/src/components/HousingCard/HousingCard.module.scss
+++ b/src/components/HousingCard/HousingCard.module.scss
@@ -1,15 +1,15 @@
 @use "../../styles/variables";
 
 .card {
-    border: 1px solid black;
     height: 255px;
     width: 100%;
     min-width: 255px;
     background-color: variables.$primary-color;
     margin: 11px 0;
+    border-radius: 10px;
 
 }
-@media (min-width: 780px) {
+@media (min-width: 875px) {
     .card{
         height: 340px;
         max-width: 340px;
