--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,20 +1,28 @@
 @use "../../styles/variables";
 
-.card_container {
-    width: 100%;
-    background-color: variables.$secondary-color;
-    border-radius: 20px;
-    display: grid;
-    grid-template-columns: repeat(3, 340px); /* Utilise repeat pour simplifier la syntaxe */
-    gap: 1rem; /* Ajoute un espace entre les éléments */
-    justify-content: space-evenly; /* Espace uniformément les éléments horizontalement */
-    align-items: center; /* Centre les éléments verticalement */
-    margin: 60px 0 60px 0;
-    padding: 40px;
+
+
+@media (min-width: 875px) {
+    .card_container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        margin: 60px 0 60px 0;
+            padding: 40px;
+            background-color: variables.$secondary-color;
+            border-radius: 20px;
+
+    }
 }
 
-// @media (min-width: 780px) {
-//     .card_container{
-//         background-color: variables.$secondary-color;
-//     }
-// }
+@media (min-width: 1560px) {
+    .card_container{
+            width: 100%;
+            display: grid;
+            grid-template-columns: repeat(3, 340px); /* Utilise repeat pour simplifier la syntaxe */
+            gap: 1rem; 
+            justify-content: space-evenly;
+            align-items: center; 
+                
+        }
+}
