--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -14,11 +14,18 @@
 .banner_image {
     width: 100%;
     max-height: 111px;
-    height: auto;
     border-radius: 10px;
     object-fit: cover;
     filter: brightness(80%);
-  }
+}
+
+.banner_housing {
+    width: 100%;
+    height: 255px;
+    border-radius: 10px;
+    object-fit: cover;
+    filter: brightness(80%);
+}
 
 @media (min-width: 600px) {
     .banner_text{
