--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -21,7 +21,7 @@
 
 .banner_housing {
     width: 100%;
-    height: 255px;
+    max-height: 255px;
     border-radius: 10px;
     object-fit: cover;
     filter: brightness(80%);
@@ -41,5 +41,8 @@
     }
     .banner_image {
         max-height: 223px;
-      }
+    }
+    .banner_housing {
+        max-height: 415px;
+    }
 }
