--- a/src/components/HousingName/HousingName.module.scss
+++ b/src/components/HousingName/HousingName.module.scss
@@ -16,9 +16,11 @@
 @media (min-width: 875px) {
     .description {
         font-size: 36px;
+        margin: 15px 0 5px 0;
     }
     .location {
         font-size: 18px;
+        margin-bottom: 15px;
     }
     
 }
