--- a/src/components/Tag/Tag.module.scss
+++ b/src/components/Tag/Tag.module.scss
@@ -12,3 +12,12 @@
     font-size: 10px;
     margin-right: 10px;
 }
+
+
+@media (min-width: 875px) {
+    .tag {
+        font-size: 14px;
+        width: 115px;
+        height: 25px;
+    }
+}
