Banner component reactive w/ home & housing pages

--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -7,7 +7,8 @@ header {
     margin-bottom: 30px;
 }
 .header_logo {
-    width: 120px
+    width: 120px;
+    cursor: pointer;
 }
 ul {
     display: flex;
