host profile + rating component reactive

--- a/src/components/Host/style.module.scss
+++ b/src/components/Host/style.module.scss
@@ -22,6 +22,12 @@
     border-radius: 50%;
 }
 
+.profile_pic img{
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+}
+
 @media (min-width: 875px) {
     .host_name{
         width: 100px;
@@ -31,5 +37,10 @@
     .profile_pic{
         width: 64px;
         height: 64px;
+    }
+    .profile_pic img{
+        width: 64px;
+        height: 64px;
+        border-radius: 50%;
     }
 }
