--- a/src/pages/Housing/style.module.scss
+++ b/src/pages/Housing/style.module.scss
@@ -10,6 +10,14 @@
     margin: 5px 0;
 }
 
+@media (min-width: 720px) {
+    .accordions_container {
+        display: flex;
+        justify-content: space-between;        
+    }
+}
+
+
 @media (min-width: 875px) {
     .main_container {
         display: flex;
