--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -1,6 +1,37 @@
 .banner_container {
     position: relative;
   } 
+.banner_container button {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    color: white;
+    font-size: 36px;
+    margin: 40px
+
+}
+.leftButton {
+    left: 0; /* Déplacer le bouton de gauche tout à gauche */
+}
+
+.rightButton {
+    right: 0; /* Déplacer le bouton de droite tout à droite */
+}
+.currentSlide {
+    position: absolute;
+    top: 80%;
+    transform: translateY(-50%);
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    font-size: 18px;
+    z-index: 1; /* Assurez-vous que le texte est au-dessus des boutons */
+    font-weight: 400;
+}
+
 .banner_text {
     position: absolute;
     top: 50%;
