--- a/src/components/HousingCard/style.module.scss
+++ b/src/components/HousingCard/style.module.scss
@@ -8,11 +8,23 @@
     margin: 11px 0;
     border-radius: 10px;
     box-shadow: inset 0px -90px 60px -50px rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: flex-end;
+    position: relative;
     img{
         object-fit: cover;
         height: 100%;
         width: 100%;
         border-radius: inherit;
+    }
+    span {
+        position: absolute;
+        display: block;
+        width: 90%;
+        margin: 15px;
+        letter-spacing: 1px;
+        color: white;
+        font-weight: 600;
     }
 }
 @media (min-width: 875px) {
