cleaning code - remaining components

--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -12,14 +12,14 @@
     font-size: 12px;
     margin: 10px
 }
-.leftButton {
+.left_button {
     left: 0;
 }
 
-.rightButton {
+.right_button {
     right: 0;
 }
-.currentSlide {
+.current_slide {
     position: absolute;
     top: 80%;
     transform: translateY(-50%);
@@ -68,7 +68,7 @@
         font-size: 42px;
         margin: 18px;
     }
-    .currentSlide {
+    .current_slide {
         display: block;
     }
 }
