--- a/src/components/Host/style.module.scss
+++ b/src/components/Host/style.module.scss
@@ -20,13 +20,14 @@
     height: 32px;
     background-color:#C4C4C4;
     border-radius: 50%;
+    img{
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+    }
 }
 
-.profile_pic img{
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-}
+
 
 @media (min-width: 875px) {
     .host_name{
