--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -7,9 +7,11 @@ footer {
     left: 0px;
     width: 100%;
     background-color: black;
-    height: 210px;
+    height: 240px;
     color: white;
+    margin-top: 40px;
 }
+
 .footer_text {
     font-size: 12px;
     width:130px;
@@ -18,11 +20,8 @@ footer {
     font-weight: 400;
 }
 
-
 @media (min-width: 720px) {
  .footer_text {
     width: 200px;
  }
 }
-
-
