--- a/src/components/HousingCard/style.module.scss
+++ b/src/components/HousingCard/style.module.scss
@@ -17,6 +17,14 @@
         width: 100%;
         border-radius: inherit;
     }
+    .gradient {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+    }
     span {
         position: absolute;
         display: block;
