--- a/src/components/HousingCard/style.module.scss
+++ b/src/components/HousingCard/style.module.scss
@@ -11,6 +11,7 @@
     display: flex;
     align-items: flex-end;
     position: relative;
+    cursor: pointer;
     img{
         object-fit: cover;
         height: 100%;
@@ -25,7 +26,7 @@
         height: 100%;
         background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
     }
-    span {
+    h2 {
         position: absolute;
         display: block;
         width: 90%;
@@ -33,6 +34,7 @@
         letter-spacing: 1px;
         color: white;
         font-weight: 600;
+        font-size: 16px;
     }
 }
 @media (min-width: 875px) {
