both accordions components unified and fixed

--- a/src/pages/Housing/style.module.scss
+++ b/src/pages/Housing/style.module.scss
@@ -13,7 +13,10 @@
 @media (min-width: 720px) {
     .accordions_container {
         display: flex;
-        justify-content: space-between;        
+        justify-content: space-between;     
+        > * {
+            width: 48%;
+        }   
     }
 }
 
