--- a/src/components/HousingCard/style.module.scss
+++ b/src/components/HousingCard/style.module.scss
@@ -9,13 +9,13 @@
     align-items: flex-end;
     position: relative;
     cursor: pointer;
-    img{
+    &__img{
         object-fit: cover;
         height: 100%;
         width: 100%;
         border-radius: inherit;
     }
-    .gradient {
+    &__gradient {
         position: absolute;
         top: 0;
         left: 0;
@@ -24,7 +24,7 @@
         background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
         border-radius: inherit;
     }
-    h2 {
+    &__title {
         position: absolute;
         display: block;
         width: 50%;
