--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -1,11 +1,12 @@
-footer {
+.footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: absolute;
     left: 0px;
-    width: 100%;
+    bottom: 0px;
+    width: 100vw;
     background-color: black;
     height: 240px;
     color: white;
