--- a/src/components/Carousel/style.module.scss
+++ b/src/components/Carousel/style.module.scss
@@ -1,86 +1,53 @@
-.carousel_container {
+.carousel {
     position: relative;
-  } 
-.carousel_container button {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    background-color: transparent;
-    border: 0;
-    cursor: pointer;
-    color: white;
-    font-size: 12px;
-    margin: 10px
-}
-.left_button {
-    left: 0;
-}
-
-.right_button {
-    right: 0;
-}
-.current_slide {
-    position: absolute;
-    top: 80%;
-    transform: translateY(-50%);
-    left: 50%;
-    transform: translateX(-50%);
-    color: white;
-    font-size: 18px;
-    z-index: 1; /* Assurez-vous que le texte est au-dessus des boutons */
-    font-weight: 400;
-    display: none;
-}
-
-.carousel_text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 18px;
-    font-weight: 400;
-    color: white;
-    width: 90%;
-}
-.carousel_image {
-    width: 100%;
-    max-height: 111px;
-    border-radius: 10px;
-    object-fit: cover;
-    filter: brightness(80%);
-}
-
-.carousel_housing {
-    width: 100%;
-    max-height: 255px;
-    border-radius: 10px;
-    object-fit: cover;
-}
-
-@media (min-width: 600px) {
-    .carousel_text{
-        text-align: center;
-        font-size: 24px;
+    &__image {
+        width: 100%;
+        max-height: 255px;
+        border-radius: 10px;
+        object-fit: cover;
     }
-}
+    &__buttons {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        background-color: transparent;
+        border: 0;
+        cursor: pointer;
+        color: white;
+        font-size: 12px;
+        margin: 10px
+    }
+    &__left {
+        left: 0;
+    }
+    &__right {
+        right: 0;
+    }
+    &__counter {
+        position: absolute;
+        top: 80%;
+        transform: translateY(-50%);
+        left: 50%;
+        transform: translateX(-50%);
+        color: white;
+        font-size: 18px;
+        z-index: 1;
+        font-weight: 400;
+        display: none;
+    }
+} 
+
 @media (min-width: 720px) {
-    .carousel_container button {
+    .carousel__buttons {
         font-size: 42px;
         margin: 18px;
     }
-    .current_slide {
+    .carousel__counter {
         display: block;
     }
 }
 @media (min-width: 1300px) {
-    .carousel_text{
-        text-align: center;
-        font-size: 48px;
-    }
-    .carousel_image {
-        max-height: 223px;
-    }
-    .carousel_housing {
+    .carousel__image {
         max-height: 415px;
     }
 }
