--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -1,35 +1,37 @@
-.banner_container {
+.banner {
     position: relative;
+    &__text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 18px;
+        font-weight: 400;
+        color: white;
+        width: 90%;
+    }
+    &__image {
+        width: 100%;
+        max-height: 111px;
+        border-radius: 10px;
+        object-fit: cover;
+        filter: brightness(80%);
+    }
   } 
-.banner_text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 18px;
-    font-weight: 400;
-    color: white;
-    width: 90%;
-}
-.banner_image {
-    width: 100%;
-    max-height: 111px;
-    border-radius: 10px;
-    object-fit: cover;
-    filter: brightness(80%);
-}
 @media (min-width: 600px) {
-    .banner_text{
+    .banner__text{
         text-align: center;
         font-size: 24px;
     }
 }
 @media (min-width: 1300px) {
-    .banner_text{
-        text-align: center;
-        font-size: 48px;
-    }
-    .banner_image {
-        max-height: 223px;
+    .banner {
+        &__text{
+            text-align: center;
+            font-size: 48px;
+        }
+        &__image {
+            max-height: 223px;
+        }
     }
 }
