--- a/src/components/Host/style.module.scss
+++ b/src/components/Host/style.module.scss
@@ -30,18 +30,20 @@
 
 
 @media (min-width: 875px) {
-    .host__name{
-        width: 100px;
-        font-size: 18px;
-    }
-    
-    .host__picture{
-        width: 64px;
-        height: 64px;
-        &__image{
+    .host{
+        &__name{
+            width: 100px;
+            font-size: 18px;
+        }
+        
+        &__picture{
             width: 64px;
             height: 64px;
-            border-radius: 50%;
+            &__image{
+                width: 64px;
+                height: 64px;
+                border-radius: 50%;
+            }
         }
     }
 }
